Muda a conexão para MSSQL

--- a/LocadoraClassic.View/LocadoraClassic.View.csproj
+++ b/LocadoraClassic.View/LocadoraClassic.View.csproj
@@ -69,6 +69,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmConectarBD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmConectarBD.Designer.cs">
+      <DependentUpon>FrmConectarBD.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmTelaCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +113,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmConectarBD.resx">
+      <DependentUpon>FrmConectarBD.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmTelaCategoria.resx">
       <DependentUpon>FrmTelaCategoria.cs</DependentUpon>
     </EmbeddedResource>
