--- a/LocadoraClassic.DAL/LocadoraClassic.DAL.csproj
+++ b/LocadoraClassic.DAL/LocadoraClassic.DAL.csproj
@@ -87,7 +87,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriaDAL.cs" />
     <Compile Include="Conexao.cs" />
+    <Compile Include="Conexao2.cs" />
     <Compile Include="GeneroDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
