--- a/LocadoraClassic.VO/LocadoraClassic.VO.csproj
+++ b/LocadoraClassic.VO/LocadoraClassic.VO.csproj
@@ -64,6 +64,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria.cs" />
+    <Compile Include="ConexaoBD.cs" />
     <Compile Include="Genero.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
