--- a/LocadoraClassic.View/LocadoraClassic.View.csproj
+++ b/LocadoraClassic.View/LocadoraClassic.View.csproj
@@ -167,5 +167,11 @@
       <Name>LocadoraClassic.VO</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
