--- a/LocadoraClassic.DAL/LocadoraClassic.DAL.csproj
+++ b/LocadoraClassic.DAL/LocadoraClassic.DAL.csproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriaDAL.cs" />
+    <Compile Include="ClienteDAL.cs" />
     <Compile Include="Conexao.cs" />
     <Compile Include="Conexao2.cs" />
     <Compile Include="GeneroDAL.cs" />
