Alteracoes no nome de Id no banco de dados

--- a/LocadoraClassic.VO/LocadoraClassic.VO.csproj
+++ b/LocadoraClassic.VO/LocadoraClassic.VO.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="ConexaoBD.cs" />
+    <Compile Include="Filme.cs" />
     <Compile Include="Genero.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
